infra/cassandra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: cassandra
  name: cassandra
spec:
  replicas: 1
  selector:
    matchLabels:
      service: cassandra
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/product-api-network: "true"
        service: cassandra
    spec:
      containers:
        - env:
            - name: CASSANDRA_PASSWORD
              value: cassandra
            - name: CASSANDRA_PASSWORD_SEEDER
              value: "yes"
            - name: CASSANDRA_SEEDS
              value: cassandra
            - name: CASSANDRA_USER
              value: cassandra
          image: docker.io/bitnami/cassandra:4.0.12
          livenessProbe:
            exec:
              command:
                - /opt/bitnami/cassandra/bin/cqlsh
                - -u cassandra
                - -p cassandra
                - -e "describe keyspaces"
            failureThreshold: 10
            periodSeconds: 15
            timeoutSeconds: 10
          name: bitnami-cassandra-v1
          ports:
            - containerPort: 7000
            - containerPort: 9042
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: cassandra-claim0
            - mountPath: /bitnami
              name: cassandra-data
      restartPolicy: Always
      volumes:
        - name: cassandra-claim0
          persistentVolumeClaim:
            claimName: cassandra-claim0
        - name: cassandra-data
          persistentVolumeClaim:
            claimName: cassandra-data
status: {}
