infra/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: cassandra
  name: cassandra
spec:
  ports:
    - name: "7000"
      port: 7000
      targetPort: 7000
    - name: "9042"
      port: 9042
      targetPort: 9042
  selector:
    service: cassandra
status:
  loadBalancer: {}
