infra/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api
spec:
  selector:
    app: product-api
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api-app
          image: jbonu/product-api-image:1.0.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
