infra/product-api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: product-api-server
  name: product-api-server
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    service: product-api-server
status:
  loadBalancer: {}
